# stateagent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
examples/: kyc_example.py  onboarding_example.py
stateagent/: __init__.py
stateagent/core/: agent.py  llm.py  state.py  tools.py  validation.py
tests/: test_state.py  test_tools.py
